--- a/readme
+++ b/readme
@@ -1,1 +1,25 @@
-AAAAAA
+# Networks Project 2021 / 370-Project
+
+## About / Synopsis
+
+* This is a networks project implemented for a college class. This project blocks a user from accessing a website based on its IP address. 
+
+## Installation
+
+* Install Python 3 https://www.python.org/downloads/
+* Pip install httpserver https://pypi.org/project/httpserver/ 
+* Pip install scapy https://scapy.readthedocs.io/en/latest/installation.html
+* Pip install asyncio https://pypi.org/project/asyncio/
+
+## Usage
+* Type python Hosts_File_Filter.py to run the hosts file filter. 
+* Type python DNS_Proxy.py to run the DNS proxy server. 
+
+### Requirements
+
+Python 3. 
+
+
+### Limitations
+
+The DNS Proxy server can only intercept DNS requests and cannot return the spoofed packets to the client process. 
